@@ -1,1 +1,11 @@
 # Floating-for-Youtube
+
+## 簡介
+* FFY 與 FFY2 分別是兩種Floating for Youtube，可以製造小型懸浮窗在電腦上以觀看 Youtube 影片
+* FFY 使用時會類似一般瀏覽器，在上面找到想要的影片後，按下影片左上方的按鈕即可懸浮。
+* FFY2 使用時需要輸入特定網址，並直接以懸浮視窗的形式呈現。
+
+## 執行方式
+* 在command 上執行 java FFY.jar --module-path ".\lib" --add-modules=javafx.controls,javafx.web,javafx.graphics,javafx.base
+* 因為常有版本問題，故目前尚未打包成更方便執行的檔案，如執行時遇到此問題，請下載至一致版本的JRE與JDK(這部分尚無法完全解決)
+
